# be/src/wiki/dto/admin-autosave-wiki-draft.dto.ts
@@ -1,0 +1,15 @@
+import { IsNotEmpty, IsOptional, IsString } from 'class-validator';
+
+export class AdminAutosaveWikiDraftDto {
+  @IsString()
+  @IsNotEmpty()
+  language: string;
+
+  @IsString()
+  @IsOptional()
+  title?: string;
+
+  @IsString()
+  @IsOptional()
+  content?: string;
+}
